# school-sms

./: .gitignore
client/: index.html  jsconfig.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css  index.jsx
client/src/api/: books.json  courses.json
client/src/components/: BackTop.jsx  Book.jsx  Course.jsx
client/src/components/layouts/: CategoriesNavbar.jsx  Navbar.jsx  PrivateLayout.jsx  PrivateNavbar.jsx  PublicLayout.jsx  footer.jsx  navbar.jsx
client/src/context/: auth.jsx
client/src/pages/: 404.jsx  landing.jsx  login.jsx  register.jsx
client/src/pages/courses/: index.jsx
client/src/pages/home/: index.jsx
client/src/utils/: routes.jsx
server/: Cargo.toml
server/src/: main.rs  schema.rs
server/src/graphql/: mutation.rs
server/src/models/: mod.rs  org.rs  users.rs
server/src/types/: org.rs
src/: main.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/middleware/: auth.rs  mw.rs
src/models/: org.rs  users.rs
src/types/: user.rs
