[package]
name = "school-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
async-graphql = {version = "5.0.6", features = ["bson", "chrono"]}
async-graphql-actix-web = "5.0.6"
bcrypt = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.26"
futures-util = "0.3.26"
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
actix-cors = "0.6"
serde = {version= "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
time = "0.3.17"
argon2 = "0.4.1"
